--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "allure-jest": "^3.0.0-beta.7",
     "ts-jest": "^29.2.3",
     "tsx": "^4.16.2"
+  },
+  "engines": {
+    "npm": ">=9.6.4",
+    "node": ">=20.1.0"
   }
 }
